[gd_scene load_steps=13 format=2]

[ext_resource path="res://Scenes/PlayerSkin.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/Game.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/pause_menu.tscn" type="PackedScene" id=3]
[ext_resource path="res://ASSETS/player-health-bar-over.png" type="Texture" id=4]
[ext_resource path="res://ASSETS/player-health-bar-under.png" type="Texture" id=5]
[ext_resource path="res://ASSETS/player-health-bar-health.png" type="Texture" id=6]
[ext_resource path="res://Scenes/EnergyBar.gd" type="Script" id=7]
[ext_resource path="res://Scenes/HealthBar.gd" type="Script" id=8]
[ext_resource path="res://ASSETS/panel_Example4.png" type="Texture" id=9]
[ext_resource path="res://Warped Portraits Files/portraits with bg/base2.png" type="Texture" id=10]
[ext_resource path="res://Scripts/Samo.gd" type="Script" id=13]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 29.75, 64.5 )

[node name="Samo" type="KinematicBody2D" groups=["player"]]
position = Vector2( 18, -3 )
script = ExtResource( 13 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="PlayerSkin" parent="." instance=ExtResource( 1 )]

[node name="Game" parent="." instance=ExtResource( 2 )]
position = Vector2( -239, -353 )
scale = Vector2( 1.5, 1.5 )
z_as_relative = false

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="PauseMenu" parent="CanvasLayer" instance=ExtResource( 3 )]

[node name="HealthBar" type="TextureProgress" parent="CanvasLayer"]
margin_left = 80.0
margin_top = 18.0
margin_right = 324.0
margin_bottom = 41.0
texture_under = ExtResource( 5 )
texture_over = ExtResource( 4 )
texture_progress = ExtResource( 6 )
nine_patch_stretch = true
script = ExtResource( 8 )

[node name="EnergyBar" type="TextureProgress" parent="CanvasLayer"]
margin_left = 80.0
margin_top = 49.0
margin_right = 199.0
margin_bottom = 67.0
max_value = 20.0
texture_under = ExtResource( 5 )
texture_over = ExtResource( 4 )
texture_progress = ExtResource( 9 )
tint_under = Color( 0.976471, 0.976471, 0.976471, 1 )
tint_progress = Color( 0.8, 0.0627451, 0.803922, 1 )
nine_patch_stretch = true
script = ExtResource( 7 )

[node name="SamoProfile" type="Sprite" parent="CanvasLayer"]
position = Vector2( 43, 44 )
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 10 )

[node name="BulletSpawn" type="Position2D" parent="."]
position = Vector2( 60, -45 )

[node name="BulletSpawnRun" type="Position2D" parent="."]
position = Vector2( 75, -35 )

[node name="BulletSpawnIzq" type="Position2D" parent="."]
position = Vector2( -60, -45 )

[node name="BulletSpawnRunIzq" type="Position2D" parent="."]
position = Vector2( -75, -45 )

[connection signal="just_shot" from="." to="Game" method="_on_Samo_just_shot"]
[connection signal="just_shot" from="." to="CanvasLayer/EnergyBar" method="_on_Samo_just_shot"]
[connection signal="combo_changed" from="Game" to="CanvasLayer/EnergyBar" method="_on_Game_combo_changed"]
[connection signal="max_combo_reached" from="CanvasLayer/EnergyBar" to="." method="_on_EnergyBar_max_combo_reached"]
